# vigilante-geotecnico

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  ARCSAR_20250404_F8_Displacement_AREA ALT-079..csv  LICENSE  README.md  REFACTORING_SUMMARY.md  agente_geotecnico.py  agente_geotecnico_agno.py  agente_geotecnico_ds.py  agente_geotecnico_modular.py  agno_team.py  backend_app.py  discrepancias.jsonl  eventos_ALT-079.csv  install.bat  install.sh  pyproject.toml  registros.jsonl  requirements-lock.txt  requirements.txt  resumen.json  start_server.py
.github/workflows/: ci.yml
docs/: AGNO_IMPLEMENTATION.md  FEATURES.md  less_help.txt
tests/: test_agente.py  test_agente_ds.py  test_backend_app.py  test_prompt_length.py
vigilante_geotecnico/: README.md  __init__.py  main.py
vigilante_geotecnico/analysis/: __init__.py  indicators.py  thresholds.py  window.py
vigilante_geotecnico/cli/: __init__.py  parser.py
vigilante_geotecnico/core/: __init__.py  constants.py  models.py
vigilante_geotecnico/data/: __init__.py  loaders.py  preprocessing.py
vigilante_geotecnico/llm/: __init__.py  client.py  prompts.py  validation.py
vigilante_geotecnico/output/: __init__.py  console.py  formatters.py
vigilante_geotecnico/simulation/: __init__.py  runner.py
web/: agents.html  index.html
